[project]
name = "lambda-layer-for-docker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shibahu7", email = "salz.lawn0805@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lambda_layer_for_docker"]
